cmake_minimum_required(VERSION 3.24)
project(Course_C__)

set(CMAKE_CXX_STANDARD 23)

#add_executable(Course_C__ Lab_1/functions.cpp Lab_1/functions.h Lab_1/main.cpp) #for lab 1
#add_executable(Course_C__ Lab_2/main.cpp Lab_2/class.cpp Lab_2/class.h Lab_2/menu.cpp Lab_2/menu.h) #for lab 2
#add_executable(Course_C__ Lab_3/main.cpp Lab_3/class.cpp Lab_3/class.h) #for lab 3
#add_executable(Course_C__ Lab_4/main.cpp Lab_4/interfaces.cpp Lab_4/interfaces.h Lab_4/segment.cpp Lab_4/segment.h Lab_4/hexagon.cpp Lab_4/hexagon.h Lab_5/main.cpp) #for lab 4
#add_executable(Course_C__ Lab_5/main.cpp Lab_5/template.cpp Lab_5/template.h Lab_5/exception.cpp Lab_5/exception.h) #for lab 5
#add_executable(Course_C__ Lab_6/main.cpp Lab_6/functions.h) #for lab 6
add_executable(Course_C__ Lab_7/main.cpp Lab_7/ringBuffer.h) #for lab 7